--- a/_includes/resume/research.liquid
+++ b/_includes/resume/research.liquid
@@ -1,5 +1,5 @@
 <ul class="card-text font-weight-light list-group list-group-flush">
-  {% assign work = data[1] | sort: 'startDate' | reverse %}
+  {% assign research = data[1] | sort: 'startDate' | reverse %}
   {% for content in research %}
     <li class="list-group-item">
       <div class="row">
