--- a/_includes/resume/projects.liquid
+++ b/_includes/resume/projects.liquid
@@ -1,5 +1,5 @@
 <ul class="card-text font-weight-light list-group list-group-flush">
-  {% for content in site.data.resume.presentations %}
+  {% for content in data[1] %}
     <li class="list-group-item">
       <div class="row">
         <div class="col-xs-2 cl-sm-2 col-md-2 text-center date-column">
