--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -23,3 +23,17 @@ $max-content-width: {{ site.max_width }};
   "tabler-icons/tabler-icons-filled.scss",
   "tabler-icons/tabler-icons-outline.scss"
 ;
+
+.share-buttons {
+    margin-top: 20px;
+    display: flex;
+    gap: 10px;
+}
+
+.share-buttons img {
+    transition: transform 0.2s ease;
+}
+
+.share-buttons img:hover {
+    transform: scale(1.2);
+}
