--- a/_layouts/default.liquid
+++ b/_layouts/default.liquid
@@ -19,7 +19,7 @@
   <body class="{% if site.navbar_fixed %}fixed-top-nav{% endif %} {% unless site.footer_fixed %}sticky-bottom-footer{% endunless %}">
     <!-- Header -->
     {% include header.liquid %}
-
+    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css">
     <!-- Content -->
     <div class="container mt-5" role="main">
       {% if page.toc and page.toc.sidebar %}
