--- a/_layouts/post.liquid
+++ b/_layouts/post.liquid
@@ -63,13 +63,13 @@ layout: default
 
 <div class="share-buttons">
     <a href="https://www.facebook.com/sharer/sharer.php?u={{ site.url }}{{ page.url }}" target="_blank">
-        <img src="{{ site.baseurl }}/assets/icons/facebook_icon.png" alt="Facebook" width="30">
+        <img src="/assets/icons/facebook_icon.png" alt="Facebook" width="30">
     </a>
     <a href="https://twitter.com/intent/tweet?url={{ site.url }}{{ page.url }}&text={{ page.title }}" target="_blank">
-        <img src="{{ site.baseurl }}/assets/icons/twitter_icon.png" alt="Twitter" width="30">
+        <img src="/assets/icons/twitter_icon.png" alt="Twitter" width="30">
     </a>
     <a href="https://www.linkedin.com/shareArticle?url={{ site.url }}{{ page.url }}" target="_blank">
-        <img src="{{ site.baseurl }}/assets/icons/linkedin_icon.png" alt="LinkedIn" width="30">
+        <img src="/assets/icons/linkedin_icon.png" alt="LinkedIn" width="30">
     </a>
 </div>
 
