--- a/_layouts/post.liquid
+++ b/_layouts/post.liquid
@@ -72,7 +72,7 @@ layout: default
         <img src="{{ site.baseurl }}/assets/icon/linkedin_icon.png" alt="LinkedIn" width="30">
     </a>
     <a href="{{ site.url }}{{ page.url }}" target="_blank">
-        <img src="{{ site.baseurl }}/assets/icons/share_icon.png" alt="Share" width="30">
+        <img src="{{ site.baseurl }}/assets/icon/share_icon.png" alt="Share" width="30">
     </a>
 </div>
 
