--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -11,7 +11,7 @@
   --global-text-color-light: #{$grey-color};
   --global-theme-color: #{$black-color};
   --global-hover-color: #{$light-purple-color};
-  --global-hover-text-color: #{$white-color};
+  --global-hover-text-color: #{$cyan-color};
   --global-footer-bg-color: #{$grey-color-dark};
   --global-footer-text-color: #{$grey-color-light};
   --global-footer-link-color: #{$white-color};
