--- a/_layouts/cv.liquid
+++ b/_layouts/cv.liquid
@@ -94,8 +94,8 @@ layout: default
                   {% include resume/work.liquid %}
                 {% when 'volunteer' %}
                   {% include resume/volunteer.liquid %}
-                {% when 'projects' %}
-                  {% include resume/projects.liquid %}
+                {% when 'prentations' %}
+                  {% include resume/presentations.liquid %}
                 {% when 'awards' %}
                   {% include resume/awards.liquid %}
                 {% when 'skills' %}
