--- a/_layouts/page.liquid
+++ b/_layouts/page.liquid
@@ -10,6 +10,9 @@ layout: default
 
 <div class="post">
   <header class="post-header">
+    {% if page.thumbnail %}
+      <img src="{{ page.thumbnail }}" alt="{{ page.title }} thumbnail" class="post-thumbnail">
+    {% endif %}
     <h1 class="post-title">{{ page.title }}</h1>
     <p class="post-description">{{ page.description }}</p>
   </header>
