--- a/_layouts/cv.liquid
+++ b/_layouts/cv.liquid
@@ -94,7 +94,7 @@ layout: default
                   {% include resume/work.liquid %}
                 {% when 'volunteer' %}
                   {% include resume/volunteer.liquid %}
-                {% when 'prentations' %}
+                {% when 'presentations' %}
                   {% include resume/presentations.liquid %}
                 {% when 'awards' %}
                   {% include resume/awards.liquid %}
