--- a/_includes/metadata.liquid
+++ b/_includes/metadata.liquid
@@ -37,6 +37,7 @@
   {% else %}
     {{ title }}
   {% endif %}
+{% seo %}
 </title>
 <meta name="author" content="{{ author_name }}">
 <meta name="description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
